--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <header>
 
     <div id="headerBox">
-      <div id="logoBox"></div>
-      <div id="searchBox"></div>
-      <div id="menuBox"></div>
+      <div id="logoBox">로고를 넣을겁니다.</div>
+      <div id="searchBox">검색창</div>
+      <div id="menuBox">햄버거메뉴박스</div>
     </div>
 
   </header>
