--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <header>
 
     <div id="headerBox">
-      <div id="logoBox">로고를 넣을겁니다.</div>
-      <div id="searchBox">검색창</div>
-      <div id="menuBox">햄버거메뉴박스</div>
+      <div id="logoBox">가운데 박스를 보세요</div>
+      <div id="searchBox">오른쪽 박스를 보세요</div>
+      <div id="menuBox">뭘 봐;</div>
     </div>
 
   </header>
